--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "churchill": "0.0.5",
     "connect-redis": "^3.1.0",
     "cookie-parser": "^1.4.1",
-    "express": "^4.13.4",
+    "express": "^4.14.0",
     "express-partial-templates": "^0.2.0",
     "express-session": "^1.13.0",
     "hof": "UKHomeOffice/hof#so-master",
@@ -40,6 +40,7 @@
     "debug": "^2.2.0",
     "istanbul": "^0.4.3",
     "jscs": "^3.0.3",
+    "lodash": "^4.14.1",
     "mocha": "^2.4.5",
     "supertest": "^1.2.0",
     "supertest-as-promised": "^3.2.0"
