--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "express-partial-templates": "^0.2.0",
     "express-session": "^1.13.0",
     "helmet": "^2.3.0",
-    "hof-controllers": "^4.0.1",
+    "hof-controllers": "UKHomeOfficeForms/hof-controllers#debug",
     "hof-form-wizard": "^1.0.2",
     "hof-govuk-template": "^1.0.0",
     "hof-middleware": "^1.0.0",
