--- a/package.json
+++ b/package.json
@@ -61,6 +61,10 @@
     "supertest-as-promised": "^3.2.0",
     "travis-conditions": "0.0.0"
   },
+  "optionalDependencies": {
+    "hof-govuk-template": "^1.0.0",
+    "hof-template-partials": "^3.2.0"
+  },
   "pre-commit": [
     "test"
   ],
