--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "istanbul": "^0.4.3",
     "mocha": "^2.4.5",
     "pre-commit": "^1.1.3",
+    "request": "^2.79.0",
     "sinomocha": "^0.2.4",
     "sinon": "^1.17.5",
     "sinon-chai": "^2.8.0",
